# pipedrive-mcp

./: .env.example  pyproject.toml
pipedrive/: mcp_instance.py
pipedrive/api/: pipedrive_client.py
pipedrive/api/features/deals/: deals_tool_registry.py
pipedrive/api/features/deals/client/: deal_client.py
pipedrive/api/features/deals/client/tests/: test_deal_client.py
pipedrive/api/features/deals/tools/: deal_label_create_tool.py  deal_label_list_tool.py
pipedrive/api/features/deals/tools/tests/: conftest.py  test_deal_label_tools.py
pipedrive/api/features/notes/: __init__.py  notes_tool_registry.py
pipedrive/api/features/notes/client/: __init__.py  comment_client.py  note_client.py
pipedrive/api/features/notes/client/tests/: __init__.py  test_comment_client.py  (+1 more)
pipedrive/api/features/notes/models/: __init__.py  comment.py  note.py
pipedrive/api/features/notes/tools/: __init__.py  comment_add_tool.py  comment_delete_tool.py  comment_get_tool.py  comment_list_tool.py  comment_update_tool.py  note_create_tool.py  note_delete_tool.py  note_get_tool.py  note_list_tool.py  note_update_tool.py
pipedrive/api/features/pipelines/: pipelines_tool_registry.py
pipedrive/api/features/pipelines/client/: pipeline_client.py
pipedrive/api/features/pipelines/tools/: pipeline_get_tool.py  pipeline_list_tool.py  stage_get_tool.py  stage_list_tool.py
pipedrive/api/features/users/: users_tool_registry.py
pipedrive/api/features/users/client/: user_client.py
pipedrive/api/features/users/models/: user.py
pipedrive/api/features/users/tools/: user_get_tool.py
(+19 files in other folders)
